# Prism

./: CHANGELOG.md  README.md  pyproject.toml
.github/: copilot-instructions.md
config/: GLOBAL_CONFIG.json  GLOBAL_CONFIG.json.bak  Prism_CONFIG.json  config.yaml  prism_params.yaml
config/config.d/: 10_display.yaml
examples/: exemplar.py  test_config.py  test_date_fixer.py  test_example_module.py  test_paths.json  test_prism_params.py
examples/testInputData/: bad_params.yaml  sample_dates.csv  sample_params.yaml
src/prism/: __init__.py  config_manager.py  module_base.py  orchestrator.py  run_summary.py
src/prism/core/: __init__.py  registry.py
src/prism/interfaces/: __init__.py
src/prism/interfaces/api/: __init__.py
src/prism/interfaces/cli/: __init__.py  cli.py
src/prism/interfaces/gui/: __init__.py
src/prism/interfaces/tui/: __init__.py
src/prism/modules/: __init__.py
src/prism/modules/date_fixer/: __init__.py  date_fixer_module.py
src/prism/modules/example/: __init__.py  example_module.py
src/prism/modules/prism_params/: __init__.py  prism_params_module.py
tests/: test_orchestrator.py  test_paths.json
tests/test_data/: sample_dates.csv  sample_params.yaml
